--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
