--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-cloudinary": "^4.23.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
-    "zustand": "^4.4.3",
-    "react-spinners": "^0.13.8"
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
